crates/ruma-common/tests/events/ui/08-enum-invalid-path.stderr
error[E0433]: failed to resolve: could not find `not` in `events`
 --> tests/events/ui/08-enum-invalid-path.rs:6:35
  |
6 |         "m.not.a.path" => events::not::a::path,
  |                                   ^^^ could not find `not` in `events`
